--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "analyze": "size-limit --why",
     "cm": "npx git-cz"
   },
-  "peerDependencies": {},
   "husky": {
     "hooks": {
       "pre-commit": "tsdx lint"
@@ -50,10 +49,10 @@
     "@size-limit/preset-small-lib": "5.0.3",
     "@types/lodash": "4.14.172",
     "husky": "7.0.2",
+    "semantic-release": "17.4.7",
     "size-limit": "5.0.3",
     "tsdx": "0.14.1",
     "tslib": "2.3.1",
     "typescript": "4.4.2"
-  },
-  "dependencies": {}
+  }
 }
